--- a/src/index.css
+++ b/src/index.css
@@ -110,11 +110,16 @@
     font-style: italic;
   }
 
-  
-  body{
-    overflow-x: hidden;  
+
+  html{
+    scroll-behavior:smooth;
+    overflow-x: hidden;
   }
 
   .button {
     @apply mt-5 w-full;
+  }
+
+  .next-button{
+    @apply text-primary/90 text-xl  w-10  cursor-pointer hover:w-11 transition-all active:text-blue-200 active:bg-blue-600
   }
